# Resolv

./: .dockerignore  .gitignore  README.md  nodes_jobs.md  pyproject.toml
.claude/: claude.md
.container/: sandbox.Dockerfile
.github/workflows/: cd.yml  ci.yml
config/: .coderabbit.yaml  settings.toml
discussion/: design_choices.md
docs/: architecture.txt
plan/: implementation_plan.md
src/resolv/: __init__.py  config.py  dispatch.py  exceptions.py  main.py  webhook.py
src/resolv/adapters/: __init__.py  claude_code_client.py  coder.py  github_client.py  llm_inference.py
src/resolv/core/: __init__.py  app.py  graph.py  state.py
src/resolv/nodes/: __init__.py  coder.py  coderabbit_qa.py  context_broker.py  deliver.py  env_installer.py  test_runner.py
src/resolv/utils/: __init__.py  ast_tools.py  docker_client.py  git_provenance.py  run_log.py  sandbox.py
tests/: conftest.py
tests/integration/: _stub_nodes.py  test_graph_cycle.py  test_webhook.py
tests/unit/: test_app.py  test_ast_tools.py  test_claude_code_client.py  test_coder_adapter.py  test_coder_factory.py  test_coder_node.py  test_coderabbit_qa.py  test_context_broker.py  test_deliver.py  test_dispatch.py  test_docker_client.py  test_env_installer.py  test_git_provenance.py  test_github_client.py  test_llm_inference.py  test_main_cli.py  test_run_log.py  test_sandbox.py  test_state.py  test_test_runner.py
