[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolv"
version = "0.1.0"
description = "Autonomous stateful AI assistant that ingests issues and ships verified pull requests."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "claude-agent-sdk>=0.1.0",
    "PyGithub>=2.3",
    "GitPython>=3.1",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
resolv = "resolv.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
